hilight boardnow works for everybody